# th

./: .gitignore  CMakeLists.txt  patch.diff
scripts/: build.sh
src/: CMakeLists.txt
src/cli/: main.cpp
src/common/: Job.hpp
src/core/: CudaKernel.cu  CudaSha256d.cuh  CudaSolver.cpp  CudaSolver.cu  CudaSolver.hpp
src/miner/: CpuMiner.cpp  CpuMiner.hpp  MinerApp.cpp  MinerApp.hpp
src/stratum/: StratumClient.cpp  StratumClient.hpp
src/util/: Util.cpp  Util.hpp
